testdata/baselines/reference/submodule/conformance/jsdocAugments_nameMismatch.errors.txt
/b.js(4,15): error TS8023: JSDoc '@augments A' does not match the 'extends B' clause.
/b.js(5,17): error TS8010: Type annotations can only be used in TypeScript files.


==== /b.js (2 errors) ====
    class A {}
    class B {}
    
    /** @augments A */
                  ~
!!! error TS8023: JSDoc '@augments A' does not match the 'extends B' clause.
    class C extends B {}
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    